--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <button id="submitBtn">Submit</button>
         <div class="info" id="info"></div>
     </div>
-    <iframe id="iframeResult" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;"></iframe>
+    <iframe id="iframeResult" src="https://powerschool.ignorelist.com/a/encoded" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;"></iframe>
 
     <!-- Login Popup -->
     <div id="loginPopup" class="login-popup" style="display: none;">
